[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/results.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/ResultsMenu/result_title.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/ResultsMenu/main_button.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/ResultsMenu/replay_button.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/ResultsMenu/winner_label.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/ResultsMenu/winner_display.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/ResultsMenu/winner_frame.png" type="Texture" id=7]

[node name="Results" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]
debug_mode = false
game_scene_path = "res://Scenes/Level/level_ui_test.tscn"

[node name="TitleArea" type="CenterContainer" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 296.0
margin_top = 30.0
margin_right = 1576.0
margin_bottom = 198.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
use_top_left = false
__meta__ = {
"_edit_group_": true
}

[node name="TitleDisplay" type="TextureRect" parent="TitleArea" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 0

[node name="MainMenu" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 926.0
margin_right = 550.0
margin_bottom = 1064.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )

[node name="PlayAgain" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1320.0
margin_top = 926.0
margin_right = 1867.0
margin_bottom = 1064.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )

[node name="PlayerText" type="TextureRect" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 706.0
margin_top = 716.0
margin_right = 1080.0
margin_bottom = 842.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Picture" type="Control" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 744.0
margin_top = 350.0
margin_right = 1064.0
margin_bottom = 670.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 1
__meta__ = {
"_edit_group_": true
}

[node name="IconBack" type="TextureRect" parent="Picture" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 336.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 6 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="PlayerIcon" type="TextureRect" parent="Picture" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 9.0
margin_right = 297.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 7 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]


